--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,6 +2,6 @@ server.port=${port:8081}
 
 spring.datasource.url=mysql://bbc18534497bd9:eba48563@us-cdbr-iron-east-03.cleardb.net/heroku_dcbdb32ec402f4f?reconnect=true
 
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
