--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,8 @@
 server.port=${port:8081}
 
-spring.datasource.url=mysql://bbc18534497bd9:eba48563@us-cdbr-iron-east-03.cleardb.net/heroku_dcbdb32ec402f4f?reconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/cursosbv?useTimezone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=root
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
