--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,7 @@
 server.port=${port:8081}
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cursosbv?useTimezone=true&serverTimezone=America/Sao_Paulo
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=mysql://bbc18534497bd9:eba48563@us-cdbr-iron-east-03.cleardb.net/heroku_dcbdb32ec402f4f?reconnect=true
 
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true 
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false 
