--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=test
+
+default.sender=gomes.wallace10@gmail.com
+default.recipient=gomes.wallace10@gmail.com
