--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.profiles.active=test
 
 default.sender=gomes.wallace10@gmail.com
 default.recipient=gomes.wallace10@gmail.com
+
+jwt.secret=SequenciaDeCaracteresParaAssinarTokenJWT
+jwt.expiration=60000
