--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,15 @@ default.sender=gomes.wallace10@gmail.com
 default.recipient=gomes.wallace10@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaAssinarTokenJWT
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=curso-spring-ionic
+s3.region=sa-east-1
+
+img.prefix.client.profile=cp
+img.profile.size=200
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
